# AIstudioProxyAPI-EN

./: .env.example  .git_msg_temp.md  .gitignore  README.md  gui_launcher.py  launch_camoufox.py  llm.py  pyproject.toml  server.py
api_utils/: app.py  client_connection.py  dependencies.py  model_switching.py  page_response.py  queue_worker.py  request_processor.py  response_generators.py  server_state.py  tool_converter.py  utils.py
browser_utils/: __init__.py  auth_rotation.py  initialization.py  model_management.py  operations.py  page_controller.py  script_manager.py  thinking_normalizer.py
config/: __init__.py  constants.py  global_state.py  selectors.py  settings.py  timeouts.py
deprecated/: gui_launcher.py
docs/: ImplementationPlan.md  smart-auth-rotation-design.md  troubleshooting.md
gui/: __init__.py  __main__.py  app.py  config.py  i18n.py  launcher.py  styles.py  theme.py  tray.py  utils.py  widgets.py
launcher/: config.py  internal.py  runner.py
logging_utils/: setup.py
models/: __init__.py  chat.py  exceptions.py  logging.py
scripts/: llm_mock.py
static/: index.html
stream/: __init__.py  interceptors.py  proxy_connector.py  proxy_server.py  utils.py
tests/: cleanup_cooldowns.py  conftest.py  reproduce_quota_raise.py  reproduce_rotation_logic.py  reproduce_shutdown_fix.py  reproduce_zombie_stream.py  test_auth_rotation_cooldown_fix.py  test_auth_rotation_cooldown_wait.py  test_auth_rotation_fixes.py  test_config_fix.py  test_cooldown_persistence_fix.py  test_extraneous_messages.py  test_model_specific_quotas.py  test_real_env.py  (+13 more)
(+128 files in other folders)
